--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,4 +39,9 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
+
+    implementation 'com.haibin:calendarview:3.6.7'
+
+    implementation 'com.google.android.material:material:1.0.0'
+
 }
