--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,10 +13,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.ListActivity" />
-        <activity android:name=".ui.MainActivity">
+        <activity
+            android:name=".ui.ListActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:theme="@style/AppThemeEntry">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
