--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.MainActivity"
-            android:theme="@style/AppThemeEntry">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
