--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".ui.ListActivity"
+            android:name=".ui.TaskActivity"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.MainActivity"
