调整为更清晰的结构

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:launchMode="singleInstance"/>
 
         <activity
-            android:name=".ui.TaskActivity"
+            android:name=".ui.CalendarActivity"
             android:theme="@style/AppTheme"
             android:launchMode="singleInstance"/>
 
