--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.AddTaskActivity"></activity>
+        <activity
+            android:name=".ui.AddTaskActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.ListActivity"
             android:launchMode="singleInstance"
