--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".ui.AddTaskActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".ui.ListActivity"
+            android:name=".ui.list.ListActivity"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme" />
         <activity
