--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,5 +58,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.1.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
 }
